[gd_scene load_steps=10 format=3 uid="uid://df7pimudykbd"]

[ext_resource type="Script" uid="uid://depk4i6wvgy0b" path="res://ui/leaderboard/leaderboard.gd" id="1_etus6"]
[ext_resource type="PackedScene" uid="uid://b2nm8jnor4ueh" path="res://enemies/ball_and_chain_robot/ball_and_chain_robot.tscn" id="1_rbe8t"]
[ext_resource type="Script" uid="uid://bpwfhjmltosg8" path="res://ui/auth/random_point.gd" id="2_etus6"]
[ext_resource type="Texture2D" uid="uid://ca4plcouvskn2" path="res://Icons/Icons_wShadow_tile60.png" id="4_2kjw3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbe8t"]
bg_color = Color(0.239216, 0.329412, 0.670588, 1)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_75dqx"]
b = Vector2(1920, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kq4wa"]
b = Vector2(0, 1080)

[sub_resource type="CircleShape2D" id="CircleShape2D_mosw3"]
radius = 47.0

[sub_resource type="Curve2D" id="Curve2D_fmjwr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 192, 126, 0, 0, 0, 0, 1658, 119, 0, 0, 0, 0, 206, 335, 0, 0, 0, 0, 1645, 339, 0, 0, 0, 0, 196, 503, 0, 0, 0, 0, 1647, 503, 0, 0, 0, 0, 192, 678, 0, 0, 0, 0, 1647, 678, 0, 0, 0, 0, 192, 852, 0, 0, 0, 0, 1609, 859, 0, 0, 0, 0, 180, 1009, 0, 0, 0, 0, 1615, 1014)
}
point_count = 12

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_etus6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rbe8t")

[node name="BackgroundStuff" type="Node2D" parent="."]
visible = false

[node name="Border" type="Area2D" parent="BackgroundStuff"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackgroundStuff/Border"]
shape = SubResource("SegmentShape2D_75dqx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BackgroundStuff/Border"]
shape = SubResource("SegmentShape2D_kq4wa")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BackgroundStuff/Border"]
position = Vector2(0, 1080)
shape = SubResource("SegmentShape2D_75dqx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BackgroundStuff/Border"]
position = Vector2(1920, 0)
shape = SubResource("SegmentShape2D_kq4wa")

[node name="BallAndChainRobot" parent="BackgroundStuff" instance=ExtResource("1_rbe8t")]
position = Vector2(1595, 825)
scale = Vector2(5, 5)

[node name="Label" type="Label" parent="BackgroundStuff/BallAndChainRobot"]
offset_left = -12.6
offset_top = -21.2
offset_right = 29.4
offset_bottom = 1.8
theme_override_font_sizes/font_size = 10
text = "Attila"
metadata/_edit_use_anchors_ = true

[node name="RandomPoint" type="Node2D" parent="BackgroundStuff"]
script = ExtResource("2_etus6")

[node name="Area2D" type="Area2D" parent="BackgroundStuff/RandomPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackgroundStuff/RandomPoint/Area2D"]
shape = SubResource("CircleShape2D_mosw3")

[node name="Path2D" type="Path2D" parent="BackgroundStuff"]
curve = SubResource("Curve2D_fmjwr")

[node name="PathFollow2D" type="PathFollow2D" parent="BackgroundStuff/Path2D"]
unique_name_in_owner = true
position = Vector2(192, 126)
rotation = -0.00477486

[node name="NewPointTimer" type="Timer" parent="BackgroundStuff"]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="BackButton" type="Button" parent="BackgroundStuff"]
top_level = true
offset_left = 98.0
offset_top = 81.0
offset_right = 266.0
offset_bottom = 249.0
icon = ExtResource("4_2kjw3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -863.0
offset_top = -459.0
offset_right = 863.0
offset_bottom = 459.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Leaderboard
"
horizontal_alignment = 1

[node name="ShowNewEntryPanelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Add new entry"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LeaderboardEntriesVBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="VScrollBar" type="VScrollBar" parent="PanelContainer/MarginContainer/VBoxContainer/LeaderboardEntriesVBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
rounded = true

[node name="NewEntryContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1000, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NewEntryContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="NewEntryContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "user_id"

[node name="UserIdLineEdit" type="LineEdit" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "score"

[node name="ScoreLineEdit" type="LineEdit" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "time"

[node name="TimeLineEdit" type="LineEdit" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="NewEntryContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddEntryButton" type="Button" parent="NewEntryContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Add"

[node name="CancelEntryButton" type="Button" parent="NewEntryContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Close"

[connection signal="timeout" from="BackgroundStuff/NewPointTimer" to="BackgroundStuff/RandomPoint" method="_on_new_point_timer_timeout"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ShowNewEntryPanelButton" to="." method="_on_show_new_entry_panel_button_pressed"]
[connection signal="pressed" from="NewEntryContainer/MarginContainer/VBoxContainer/HBoxContainer/AddEntryButton" to="." method="_on_add_entry_button_pressed"]
[connection signal="pressed" from="NewEntryContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelEntryButton" to="." method="_on_cancel_entry_button_pressed"]
